--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -225,6 +225,10 @@
     }
 }
 
+.adv_clm{
+    margin-top: 60px;
+  }
+
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) 
 {
@@ -289,6 +293,12 @@
         object-position: 70% 0;
         height: 500px;
     }
+
+    .adv_clm{
+        margin-top: 00px;
+      }
+      
+    
   }
 
 
@@ -304,4 +314,65 @@
     background-color: indigo;
 }
 
+
+.pricing-new .card {
+    border: none;
+    border-radius: 1rem;
+    transition: all 0.2s;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  }
+  
+  .pricing-new hr {
+    margin: 1.5rem 0;
+  }
+  
+  .pricing-new .card-title {
+    margin: 0.5rem 0;
+    font-size: 0.9rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+  }
+  
+  .pricing-new .card-price {
+    font-size: 3rem;
+    margin: 0;
+  }
+  
+  .pricing-new .card-price .period {
+    font-size: 0.8rem;
+  }
+  
+  .pricing-new ul li {
+    margin-bottom: 1rem;
+  }
+  
+  .pricing-new .text-muted {
+    opacity: 0.7;
+  }
+  
+  .pricing-new .btn {
+    font-size: 80%;
+    border-radius: 5rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+    padding: 1rem;
+    opacity: 0.7;
+    transition: all 0.2s;
+  }
+  
+  /* Hover Effects on Card */
+  
+  @media (min-width: 992px) {
+    .pricing-new .card:hover {
+      margin-top: -.25rem;
+      margin-bottom: .25rem;
+      box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+    }
+  
+    .pricing-new .card:hover .btn {
+      opacity: 1;
+    }
+  }
+
+ 
 
