--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: rgba(252, 0, 18, 0.1);
+  /* background: rgba(252, 0, 18, 0.1); */
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
@@ -14355,6 +14355,7 @@ span.select2-selection.select2-selection--single:focus {
   display: block;
   font-family: var(--title-font);
   margin-bottom: -0.45em;
+  line-height: 35px;
 }
 
 .team-card .team-content {
@@ -21574,13 +21575,18 @@ span.select2-selection.select2-selection--single:focus {
 
 /*------------------- 4.00. Client -------------------*/
 .client-thumb img {
-  opacity: 0.2;
+  /* opacity: 1; */
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
 .client-thumb:hover img {
-  opacity: 1;
+  /* opacity: 1; */
+  filter: none;
+  -webkit-filter: grayscale(0%);
 }
 
 .client-area-3 {
